# rtfm

./: .buildconfig  DESIGN.md  Makefile.am  README.md  TODO.md  configure.ac
contrib/: Makefile.am
contrib/fuzzy-glib/: Makefile.am  fuzzy-glib.h  fuzzy-index-builder.c  fuzzy-index-builder.h  fuzzy-index-cursor.c  fuzzy-index-cursor.h  fuzzy-index-match.c  fuzzy-index-match.h  fuzzy-index-private.h  fuzzy-index.c  fuzzy-index.h  fuzzy-util.c  fuzzy-util.h  fuzzy-version.h  fuzzy-version.h.in  test-builder.c  test-util.c
data/: Makefile.am
plugins/: Makefile.am
plugins/dummy/: dummy.plugin  dummy.py
plugins/gnome-platform/: Makefile.am  gnome-platform.plugin
plugins/gnome-platform/gnome_platform/: __init__.py
plugins/gobject-introspection/: Makefile.am  gobject-introspection.plugin  rtfm-gir-alias.c  rtfm-gir-alias.h  rtfm-gir-annotation.c  rtfm-gir-annotation.h  rtfm-gir-array.c  rtfm-gir-array.h  rtfm-gir-base.c  rtfm-gir-base.h  rtfm-gir-bitfield.c  rtfm-gir-bitfield.h  rtfm-gir-c-include.c  rtfm-gir-c-include.h  rtfm-gir-callback.c  rtfm-gir-callback.h  rtfm-gir-class.c  rtfm-gir-class.h  rtfm-gir-compiler.c  rtfm-gir-constant.c  rtfm-gir-constant.h  rtfm-gir-constructor.c  rtfm-gir-constructor.h  rtfm-gir-doc-deprecated.c  rtfm-gir-doc-deprecated.h  rtfm-gir-doc-stability.c  rtfm-gir-doc-stability.h  rtfm-gir-doc-version.c  rtfm-gir-doc-version.h  rtfm-gir-doc.c  rtfm-gir-doc.h  rtfm-gir-enumeration.c  rtfm-gir-enumeration.h  rtfm-gir-field.c  rtfm-gir-field.h  rtfm-gir-file.c  rtfm-gir-file.h  rtfm-gir-function.c  rtfm-gir-function.h  rtfm-gir-glib-boxed.c  (+59 more)
plugins/platform/: platform.plugin  platform.py
src/: Makefile.am  main.c  rtfm-animation.c  rtfm-animation.h  rtfm-application.c  rtfm-application.h  rtfm-bolding-label.c  rtfm-bolding-label.h  rtfm-collection.c  rtfm-collection.h  rtfm-frame-source.c  rtfm-frame-source.h  rtfm-item-private.h  rtfm-item.c  rtfm-item.h  rtfm-library-private.h  rtfm-library.c  rtfm-library.h  rtfm-path-bar-label.c  rtfm-path-bar-label.h  rtfm-path-bar.c  rtfm-path-bar.h  rtfm-path-element.c  rtfm-path-element.h  rtfm-path.c  rtfm-path.h  rtfm-provider.c  rtfm-provider.h  rtfm-rect.c  rtfm-rect.h  rtfm-search-result.c  rtfm-search-result.h  rtfm-search-results.c  rtfm-search-results.h  rtfm-search-settings.c  rtfm-search-settings.h  rtfm-search-view-row.c  rtfm-search-view-row.h  rtfm-search-view.c  rtfm-search-view.h  (+19 more)
src/resources/: rtfm.gresource.xml
src/resources/css/: rtfm-path-bar.css  rtfm-search-view.css  rtfm-sidebar.css  rtfm-view-group.css  rtfm-view.css  rtfm-window.css
src/resources/ui/: rtfm-search-view.ui  rtfm-sidebar-row.ui  rtfm-sidebar.ui  rtfm-view-group.ui  rtfm-view.ui  rtfm-window.ui
tests/: Makefile.am  test-rtfm-path.c
